# synesthesia

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-release.yml
assets/fonts/icons/: README.md
assets/luts/: ReSyne_Display_v1.cube
cmake/: dependencies.cmake  ffmpeg.cmake  optimisations.cmake  platform.cmake  renderer.cmake  sources.cmake  vendor.cmake
src/: constants.h  main.cpp
src/api/: README.md  synesthesia_api_integration.cpp  synesthesia_api_integration.h
src/api/client/: api_client.h
src/api/common/: serialisation.cpp  serialisation.h  transport.cpp
src/api/examples/: fetch.py  synesthesia_client.py  websocket_bridge.py
src/api/protocol/: colour_data_protocol.h
src/api/server/: api_server.cpp  api_server.h
src/audio/input/: audio_input.cpp  audio_input.h
src/audio/output/: audio_output.cpp  audio_output.h  playback_equaliser.cpp  playback_equaliser.h
src/audio/processing/: audio_processor.cpp  audio_processor.h
src/colour/: cie_2006.h  colour_core.cpp  colour_core.h  colour_mapper.cpp  colour_mapper.h  colour_presentation.cpp  colour_presentation.h
src/colour/neon/: colour_mapper_neon.cpp  colour_mapper_neon.h
src/colour/sse/: colour_mapper_sse.cpp  colour_mapper_sse.h
src/osc/: osc_addresses.h  osc_command_queue.cpp  osc_command_queue.h  osc_config.cpp  osc_config.h  osc_frame_builder.cpp  osc_frame_builder.h  osc_messages.h  osc_packet_listener.cpp  osc_packet_listener.h  osc_receiver.cpp  osc_receiver.h  osc_runtime.cpp  osc_runtime.h  osc_sender.cpp  osc_sender.h  synesthesia_osc_integration.cpp  synesthesia_osc_integration.h
src/renderer/: bgfx_context.cpp  bgfx_context.h  detached_visualisation_window.cpp  detached_visualisation_window.h  font_loader.cpp  font_loader.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  imgui_window_context.cpp  imgui_window_context.h  main.cpp  presentation_resources.cpp  presentation_resources.h  render_utils.cpp  render_utils.h  window.cpp  window.h
src/renderer/styling/: linux.cpp  mac.mm  platform_styling.h  windows.cpp
src/renderer/windows/: app.rc.in  resource.h  resource_loader.h
src/resyne/controller/: controller.cpp  controller.h  state.h
src/resyne/conversions/: colour_space.cpp  colour_space.h
src/resyne/decoding/: audio_decoder.cpp  audio_decoder.h  decoder_flac.cpp  decoder_flac.h  decoder_mp3.cpp  decoder_mp3.h  decoder_ogg.cpp  decoder_ogg.h  decoder_wav.cpp  decoder_wav.h  wav_decoder_impl.cpp  wav_decoder_impl.h
src/resyne/recorder/: colour_cache_utils.cpp  colour_cache_utils.h  dialogs.cpp  embedded_source_utils.cpp  embedded_source_utils.h  import.cpp  recorder.h  (+8 more)
src/ui/: icons.h  ui.cpp  ui.h
src/utilities/: generate_resyne_display_lut.py
(+161 files in other folders)
